# valoria

./: .env.example  .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  DOCUMENTATION_INDEX.md  LICENSE  Makefile  PHASE_2_IMPLEMENTATION_CHECKLIST.md  README.md  SECURITY.md  TESTING.md  docker-compose.yml  openapi.json
.github/workflows/: cd.yml  ci.yml
docs/: API.md  ARCHITECTURE.md  CONFIG_VALIDATION.md  PHASE_3_1_TESTS.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/public/: index.html
frontend/src/: App.tsx
infra/k8s/prod/: api-gateway.yml  cotation-service.yml  frontend.yml  ingress.yml  postgres.yml  pricing-service.yml  rabbitmq.yml  redis.yml  scraper-service.yml  user-service.yml
infra/terraform/: main.tf  outputs.tf  variables.tf
scripts/: apply-config-validation.sh  fix-python-secrets.sh  security-check.sh
services/: config.py  config.rs
services/api-gateway/: Cargo.toml  Dockerfile
services/api-gateway/src/: main.rs
services/api-gateway/tests/: jwt_validation_tests.rs  routing_tests.rs
services/cotation-service/: .dockerignore  Dockerfile  requirements.txt
services/cotation-service/src/: database.py  engine.py  main.py  schemas.py
services/cotation-service/tests/: business_logic_tests.rs
services/pricing-service/: Dockerfile  requirements.txt
services/pricing-service/src/: database.py  (+3 more)
services/scraper-service/: Dockerfile  requirements.txt
services/user-service/: Cargo.toml  Dockerfile
services/user-service/src/: main.rs
services/user-service/tests/: auth_tests.rs
(+8 files in other folders)
