[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum            = { version = "0.7", features = ["json"] }
tokio           = { version = "1",   features = ["full"] }
serde           = { version = "1",   features = ["derive"] }
serde_json      = "1"
# Pas de rustls-tls : on utilise openssl (disponible dans rust:1.77)
reqwest         = { version = "0.12", features = ["json"] }
jsonwebtoken    = "9"
chrono          = "0.4"
tower-http      = { version = "0.5", features = ["cors"] }
bytes           = "1"
