[package]
name = "user-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum            = { version = "0.7", features = ["json", "macros"] }
tokio           = { version = "1",   features = ["full"] }
serde           = { version = "1",   features = ["derive"] }
serde_json      = "1"
sqlx            = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
jsonwebtoken    = "9"
bcrypt          = "0.15"
chrono          = "0.4"
tower-http      = { version = "0.5", features = ["cors"] }
